# doai-me

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  LAIXI_DEMO_GUIDE.md  README.md  REDESIGN_PROMPT.md  RUN_LOCAL.md  demo_youtube_watch.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_intranet.py  test_device_control.py  test_heartbeat.py  test_heartbeat_auto.py  test_parallel_youtube.py  test_tcp_only.py  test_youtube_demo.py  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.sonarlint/: connectedMode.json
Server_Vultr/: wss-server.js
aifarm-dashboard/: env.local.example  env.production.example  package-lock.json  package.json
autox-scripts/: MIGRATION_STATUS.md  README.md  simple-youtube-automation.js
backend/: main.py  package-lock.json  package.json
client-android/: youtube_simple.js
cloud-gateway/: main.py  requirements.txt
config/: config.yaml
dashboard/: DATABASE_SCHEMA.md  env.local.example  env.production.example  next.config.ts  package-lock.json  package.json
deploy/: DEPENDENCY_ANALYSIS.md  DEPLOY_GUIDE.md  env.example.txt  vultr_setup.sh
doai-me/: package.json
docs/: ARCHITECTURE_SIMPLE.md  AUTH_GUIDE.md  (+15 more)
services/doaime-mcp/: README.md  config.yaml  main.py  pyproject.toml
services/doaime-mcp/src/: __init__.py  server.py
services/doaime-mcp/src/tools/: __init__.py  devices.py  farm.py  monitoring.py  nodes.py  personas.py  recovery.py  tasks.py  youtube.py
services/doaime-mcp/src/utils/: __init__.py  client.py  config.py
services/doaime-mcp/tests/: __init__.py  conftest.py  test_tools.py
(+826 files in other folders)
